--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
     		</select>
 		</div>
 
-		<input name="age" id="age" data-type="number" placeholder="Input Age of Juvenile Seeking Services">
+		<input name="age" id="age" data-type="number" placeholder="Input Age of Juvenile Seeking Services" onChange="list_page();">
 
 		<fieldset data-role="controlgroup">
 			<h3 style="margin-top:15px;">Check All That Apply:</h3>
