--- a/index.ondeck.html
+++ b/index.ondeck.html
@@ -35,7 +35,7 @@
 		<a href="#about" class="ui-btn ui-icon-info ui-btn-icon-notext ui-corner-all ui-btn-right" data-transition="slide"></a>
 	</div>
 	<div data-role="content" class="content">
-		<div class="ui-field-contain">Use the following selections to find programs & services near you.
+		<div class="ui-field-contain">Use the following selections to find social, community based programs & services in Suffolk County.
 			<select id="town" name="select-native-1" id="select-native-1" style="width:100%" onChange="list_page();">
         		<option value="0">Choose a Location</option>
         		<option value="42.3601,-71.0589,13">Boston</option>
@@ -46,21 +46,22 @@
     		</select>
 		</div>
 
+		<p> Enter age of the juvenile seeking services.</p>
 		<input name="age" id="age" data-type="number" placeholder="Input Age of Juvenile Seeking Services" onChange="list_page();">
 
 		<fieldset data-role="controlgroup">
 			<h3 style="margin-top:15px;">Check All That Apply:</h3>
-				<input type="checkbox" name="checkbox-v-Training" id="checkbox-v-Training" onChange="list_page();">
+				<input type="checkbox" name="checkbox-v-Training" id="checkbox-v-Training" onChange="list_page();" checked="checked">
 				<label for="checkbox-v-Training">Job Opportunties/Training</label>
-				<input type="checkbox" name="checkbox-v-Outreach" id="checkbox-v-Outreach" onChange="list_page();">
+				<input type="checkbox" name="checkbox-v-Outreach" id="checkbox-v-Outreach" onChange="list_page();" checked="checked">
 				<label for="checkbox-v-Outreach">Community Outreach</label>
-				<input type="checkbox" name="checkbox-v-Counseling" id="checkbox-v-Counseling" onChange="list_page();">
+				<input type="checkbox" name="checkbox-v-Counseling" id="checkbox-v-Counseling" onChange="list_page();" checked="checked">
 				<label for="checkbox-v-Counseling">Counseling</label>
-				<input type="checkbox" name="checkbox-v-Health" id="checkbox-v-Health" onChange="list_page();">
+				<input type="checkbox" name="checkbox-v-Health" id="checkbox-v-Health" onChange="list_page();" checked="checked">
 				<label for="checkbox-v-Health">Health Services</label>
-				<input type="checkbox" name="checkbox-v-Risk" id="checkbox-v-Risk" onChange="list_page();">
+				<input type="checkbox" name="checkbox-v-Risk" id="checkbox-v-Risk" onChange="list_page();" checked="checked">
 				<label for="checkbox-v-Risk">High Risk</label>
-				<input type="checkbox" name="checkbox-v-Multi" id="checkbox-v-Multi" onChange="list_page();">
+				<input type="checkbox" name="checkbox-v-Multi" id="checkbox-v-Multi" onChange="list_page();" checked="checked">
 				<label for="checkbox-v-Multi">Multi-Service</label>
 		</fieldset>
 
@@ -84,8 +85,9 @@
 		<a href="#filter" data-transition="slide" data-direction="reverse" class="ui-btn ui-shadow ui-corner-all ui-btn-icon-left ui-icon-arrow-l">Back</a>
 	</div>
 	<div data-role="content" class="content">
-
-	<p style="text-align:center"><a href="http://suffolklitlab.org/" target="_blank"><img src="images/LIT_logo.png" width="200px"/ border="0"></a></p>
+		<p> Nicole Siino is the Legal Innovation and Technology Fellow in the Juvenile Defender Clinic at Suffolk University Law School. In addition to representing juveniles in juvenile delinquency matters, Nicole created this Juvenile Resource Finder after discovering there was no comprehensive list of resources that juveniles can benefit from. Nicole is in her last year of law school and hopes to pursue a career in public interest law. In addition to being a Student Attorney and a Legal Innovation and Technology Fellow, she is a Content Editor on the Journal of High Technology Law.</p>
+		<p> You can check out the <a href="https://www.suffolklitlab.org">Suffolk Lit Lab's</a> website to see other LIT projects!<p>
+		<p style="text-align:center"><a href="http://suffolklitlab.org/" target="_blank"><img src="images/LIT_logo.png" width="200px"/ border="0"></a></p>
 
 	</div>
 </div>
@@ -99,14 +101,6 @@
 	</div>
 	<div data-role="content" class="content">
 		<div id="detail" v-for="" v-if="">
-					<h3>{{ item['fields']['Name'] }}</h3>
-					<h4>{{ item['fields']['Category'] }}</h4>
-                    <p><b>Age Range:</b> {{ item['fields']['Minimum Age'] }} - {{ item['fields']['Maximum Age'] }}</p>
-                    <p><b>Gender:</b> {{ item['fields']['Gender'] }}</p>
-                    <p><b>Address:</b> {{ item['fields']['Address'] }}</p>
-                    <p><b>Description:</b> {{ item['fields']['Description'] }}</p>
-                    <p><b>Website:</b> {{ item['fields']['Website'] }}</p>
-                    <p><b>Contact:</b> {{ item['fields']['Contact'] }}</p>
 		</div>
 	</div>
 </div>
@@ -159,6 +153,7 @@
 <script type="text/javascript">
 
 	var categories = "";
+	var ages = "";
 	var work = 0;
 	function load_api_data(target,mode = 0,id='') {
 		work = 1;
@@ -168,7 +163,7 @@
 		if (mode == 1) {
 			apicall = "https://api.airtable.com/v0/"+app_id+"/" + $('#town').find(":selected").text() + "/?filterByFormula=(RECORD_ID()=\""+id+"\")";
 		} else {
-			apicall = "https://api.airtable.com/v0/"+app_id+"/" + $('#town').find(":selected").text() + "/?filterByFormula=AND("+Number($('#age').val())+"<={Maximum Age},"+Number($('#age').val())+">={Minimum Age},OR("+categories+"))";
+			apicall = "https://api.airtable.com/v0/"+app_id+"/" + $('#town').find(":selected").text() + "/?filterByFormula=AND("+ages+"OR("+categories+"))";
 		}
 
 		var app = new Vue({
@@ -205,17 +200,17 @@
 
 		if ($('#town').find(":selected").text() == "Choose a Location") {
 			alert('You must choose a location.');
-		} else if ( isNaN(Number($('#age').val())) || Number($('#age').val()) == 0 ) {
-			alert('You must enter a numeric age in years.')
+		} else if ( isNaN(Number($('#age').val())) ) {
+			alert('You must enter a numeric age (in years) or leave blank.')
 		} else if ($('#checkbox-v-Outreach').is(":checked") || $('#checkbox-v-Counseling').is(":checked") || $('#checkbox-v-Risk').is(":checked") || $('#checkbox-v-Training').is(":checked") || $('#checkbox-v-Health').is(":checked") || $('#checkbox-v-Multi').is(":checked")) {
 			console.log(work)
-			next_page()
+			next_page_1()
     } else {
 			alert('You must choose at least one type of service.')
 		}
 	}
 
-	function next_page() {
+	function next_page_1() {
 		if (work == 0) {
 			if ($('input[name=radio-choice-h-2]:checked', '#filter').val() == "map") {
 					size_map();
@@ -231,18 +226,19 @@
 				html: ""
 			});
 			setTimeout(function () {
-        next_page()
+        next_page_1()
     	}, 100);
 		}
 	}
 
 	function list_page() {
 
-		if ($('#town').find(":selected").text() != "Choose a Location" && (!isNaN(Number($('#age').val())) && Number($('#age').val()) != 0)) {
+		if ($('#town').find(":selected").text() != "Choose a Location" && !isNaN(Number($('#age').val())) ) {
 				$("#org_list").html("");
 				$("#org_geo_list").html("<li id=\"ge0_points\" v-for=\"item in items\">{{ item['id'] }},{{ item['fields']['Name'] }},{{ item['fields']['Latitude'] }},{{ item['fields']['Longitude'] }}</li>");
 
 				categories = "";
+
 
 				if ($('#checkbox-v-Outreach').is(":checked")){
 					$("#org_list").html( $("#org_list").html() + "<li data-role=\"list-divider\">Community Outreach</li>")
@@ -293,6 +289,12 @@
 					categories = categories+"FIND(\"Multi-Service\",{Category})";
 				}
 
+				if ($('#age').val()=="") {
+					ages = "";
+				} else {
+					ages = Number($('#age').val())+"<={Maximum Age},"+Number($('#age').val())+">={Minimum Age},";
+				}
+
 				$('#town_name').html($('#town').find(":selected").text());
 
 		    load_api_data('#results',0);
@@ -317,17 +319,19 @@
       	$("#detail").html("");
       	$("#detail").html($("#detail").html() + "<h3>{{ item['fields']['Name'] }}</h3>")
       	$("#detail").html($("#detail").html() + "<h4>{{ item['fields']['Category'] }}</h4>");
+				$("#detail").html($("#detail").html() + "<p><b>Contact:</b> {{ item['fields']['Contact'] }}</p>");
+      	$("#detail").html($("#detail").html() + "<p><b>Website:</b> {{ item['fields']['Website'] }}</p>");
       	$("#detail").html($("#detail").html() + "<p><b>Age Range:</b> {{ item['fields']['Minimum Age'] }} - {{ item['fields']['Maximum Age'] }}</p>");
       	$("#detail").html($("#detail").html() + "<p><b>Gender:</b> {{ item['fields']['Gender'] }}</p>");
       	$("#detail").html($("#detail").html() + "<p><b>Address:</b> {{ item['fields']['Address'] }}</p>");
       	$("#detail").html($("#detail").html() + "<p><b>Description:</b> {{ item['fields']['Description'] }}</p>");
-      	$("#detail").html($("#detail").html() + "<p><b>Website:</b> {{ item['fields']['Website'] }}</p>");
-      	$("#detail").html($("#detail").html() + "<p><b>Contact:</b> {{ item['fields']['Contact'] }}</p>");
+				$("#detail").html($("#detail").html() + "<p><b>Valid As Of:</b> {{ item['fields']['Valid As Of'] }}</p>");
 
 			load_api_data('#details',1,id);
 
 
-			$.mobile.changePage($('#details'), { transition: 'slide'})
+			//$.mobile.changePage($('#details'), { transition: 'slide'})
+			next_page_2();
 
       //$('#details').listview('refresh');
 		  //$( '#details' ).enhanceWithin();
@@ -335,7 +339,23 @@
       //return true;
     }
 
-		list_page();
+		function next_page_2() {
+			if (work == 0) {
+				$.mobile.changePage($('#details'), { transition: 'slide'})
+			} else {
+				$.mobile.loading( 'show', {
+					text: 'foo',
+					textVisible: true,
+					theme: 'z',
+					html: ""
+				});
+				setTimeout(function () {
+					next_page_2()
+				}, 100);
+			}
+		}
+
+		//list_page();
 
 		/*
 		https://developers.google.com/maps/documentation/javascript/adding-a-google-map
